# Teaching-evaluation

./: .gitignore  README.md  ReadMe.txt  evaluator.py  evaluator3.py  filter_lib.py  pyproject.toml  stats.py
templates/: opscan1.json  report.tex.jinja
